--- a/client/src/header/AppHeader.css
+++ b/client/src/header/AppHeader.css
@@ -31,6 +31,8 @@
   
   .app-menu {
     float: right;
+    font-size: 16px;
+    
   }
   .app-menu > li {
 	padding: 0 30px;
@@ -68,5 +70,6 @@
   .dropdown-item a {
     padding: 10px 12px;
     margin: -10px -12px;
+   
   }
   
